Wed Oct 06 11:39:12 1999  Loic Dachary  <loic@ceic.com>

	* Move htlib/*URL* to htcommon

Wed Oct 06 10:09:19 1999  Loic Dachary  <loic@ceic.com>

	* README: add htword

	* test/t_htnet: fix variable set problem & return code problem

Mon Oct 04 18:43:56 1999  Gabriele Bartolini  <g.bartol@comune.prato.it>

	* Written t_htnet test

Tue Oct  5 12:24:43 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* db/*: Import of Sleepycat's Berkeley DB 2.7.7.

	* db/db/db.c, db/include/db.h, db/include/db_cxx.h, db/mp/mp_bh.c:
	Resolve conflicts created in merge.

Tue Oct 05 18:53:13 1999  Loic Dachary  <loic@ceic.com>

	* htdig/Display.cc, htword/*.cc: add inclusion of htconfig.h

Tue Oct 05 14:54:17 1999  Loic Dachary  <loic@ceic.com>

	* htlib/htString.h (class String): add set(char*)

	* htword/WordKey.cc: define typedefs for key components. Leads to more
	  regular code and no dependency on a predefined set of known types.
	  All types must still be castable to unsigned int.
	  Assume Word of type String always exists.
	  Generic Get/Set/Unset methods made simpler. Added const and ref
	  for Get in both forms.

	* htword/WordList.cc: enable word reference counting only if wordlist_extend
	  configuration parameter is set. This parameter is hidden because 
	  no code uses per word statistics at present. It is only activated
	  in the test directory. 
	
	* htword/word_list.pl: add mapping to symbolic type names, 
	  force and check to have exactly one String field named Word.
	
Mon Oct 04 20:05:35 1999  Loic Dachary  <loic@ceic.com>

	* test: add thingies to make test work when doing ./configure
	  outside the source directory.
	
	* htword/WordList: Add Ref and Unref to update statistics.
	  Fix walking to start from the end of statistics. All statistics
	  words start with \001, therefore at the beginning of the file and
	  all clustered together.

	* htword/WordStat: derived from WordReference to implement
	  uniq word statistics.
